syntax = "proto3";

import "yandex/cloud/priv/datasphere/v2/lzy-zygote.proto";
import "yandex/cloud/priv/datasphere/v2/lzy-auth.proto";

package yandex.cloud.priv.datasphere.v2;

option go_package = "datasphere";
option java_outer_classname = "Tasks";
option java_package = "yandex.cloud.priv.datasphere.v2.lzy";

message TaskSpec {
  Auth auth = 1;
  string zygote = 2;
  repeated SlotAssignment assignments = 3;
}

message SlotAssignment {
  string slotName = 1;
  string channelId = 2;
}

message TaskStatus {
  string taskId = 1;
  string owner = 2;

  Status status = 3;
  string servant = 4;

  repeated SlotStatus connections = 5;

  string explanation = 6;

  enum Status {
    PREPARING = 0;
    CONNECTED = 1;
    RUNNING = 2;
    SUSPENDED = 3;
    FINISHED = 4;
    DESTROYED = 5;
  }
}

message TasksList {
  repeated TaskStatus tasks = 1;
}

message SignalRequest {
  Auth auth = 1;
  string tid = 2;
  SIGType sig = 3;

  enum SIGType {
    NONE = 0;
    reserved 1 to 8;
    KILL = 9;
  }
}
